--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "https://kartish-a.github.io/admin_dashboard_frontend",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.8",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
