--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 REACT_APP_API_BASE_URL= https://admindashboard-ac83de2ffce3.herokuapp.com
-REACT_APP_API_BASE_URL= http://localhost:5001
+# REACT_APP_API_BASE_URL= http://localhost:5001
 
 
 
